--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: 'Yuseong CI'
+name: 'Next CI'
 
 on:
   push:
@@ -13,12 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'yarn'
 
       - name: Install Dependencies
-        run: npm install
+        run: yarn install --immutable --immutable-cache --check-cache
 
       - name: Build
-        run: npm run build
+        run: yarn build
