--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: 'Next CI'
+name: 'Yuseong CI'
 
 on:
   push:
@@ -13,13 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: 'yarn'
 
       - name: Install Dependencies
-        run: yarn install --immutable --immutable-cache --check-cache
+        run: npm install
 
       - name: Build
-        run: yarn build
+        run: npm run build
