--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,4 +22,4 @@ jobs:
         run: yarn install --immutable --immutable-cache --check-cache
 
       - name: Build
-        run: yarn build
+        run: yarn electron-pack
