--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "main": "public/Main.js",
+  "main": "public/main.js",
   "homepage": "./",
-  "name": "medium-electron-react",
+  "name": "yuseong_allowance_payments",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,7 +28,7 @@
     "eject": "react-scripts eject",
     "react-start": "BROWSER=none yarn start",
     "electron-start": "ELECTRON_START_URL=http://localhost:3000 electron .",
-    "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/Main.js"
+    "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/main.js"
   },
   "eslintConfig": {
     "extends": [
