--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
   "devDependencies": {
     "electron": "^26.1.0",
     "electron-builder": "^24.6.3"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
