--- a/package.json
+++ b/package.json
@@ -1,59 +1,71 @@
 {
-  "main": "public/main.js",
-  "homepage": "./",
-  "name": "yuseong_allowance_payments",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "axios": "^1.6.2",
-    "electron-store": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^6.0.7",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "react-start": "BROWSER=none yarn start",
-    "electron-start": "ELECTRON_START_URL=http://localhost:3000 electron .",
-    "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/main.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "electron": "^26.1.0",
-    "electron-builder": "^24.6.3"
-  },
-  "packageManager": "yarn@4.0.2"
+    "main": "public/main.js",
+    "homepage": "./",
+    "name": "yuseong_allowance_payments",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@tanstack/react-query": "4.35.3",
+        "assert": "^2.1.0",
+        "axios": "^1.6.2",
+        "browserify-fs": "^1.0.0",
+        "crypto-browserify": "^3.12.0",
+        "file-saver": "^2.0.5",
+        "lodash": "^4.17.21",
+        "os-browserify": "^0.3.0",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
+        "react-router-dom": "^6.15.0",
+        "react-scripts": "5.0.1",
+        "stream-browserify": "^3.0.0",
+        "styled-components": "^6.0.7",
+        "web-vitals": "^2.1.0",
+        "zustand": "^4.4.7"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-scripts eject",
+        "react-start": "BROWSER=none yarn start",
+        "electron-start": "electron .",
+        "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/main.js"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/file-saver": "^2.0.7",
+        "@types/jest": "^27.0.1",
+        "@types/lodash": "^4.14.202",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "electron": "^26.1.0",
+        "electron-builder": "^24.6.3",
+        "react-app-rewired": "^2.2.1",
+        "typescript": "^4.4.2"
+    },
+    "packageManager": "yarn@1.22.19"
 }
